Fixed menu on narrow screens.

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -19,6 +19,7 @@ body > footer > nav > ul {
 	display: flex;
 	flex-direction: row;
 	justify-content: left;
+	flex-wrap: wrap;
 }
 body > footer > nav > ul > li {
 	display: block;
